--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Contacts App</string>
+    <string name="font" tools:ignore="ReferenceType">@font/abel</string>
 </resources>
